# cli-clock

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
etc/: conf.json  format-guide.md
src/: main.py
src/cli-clock/: main.py
src/cli_clock/: __init__.py  main.py  tab_registry.py
src/cli_clock/tabs/: base.py  clock.py  stopwatch.py  timer.py
src/cli_clock/utils/: __init__.py  ascii_helper.py  clock.py  config.py
src/utils/: ascii_helper.py  config.py
