[project]
name = "cli-clock"
dynamic = ["version"]
authors = [
    { name="McSnurtle" },
]
description = "Finally a clean, customizable CLI-based clock!"
dependencies = ["art>=6.5", "windows-curses ; sys_platform == 'win32'"]
keywords = ["CLI", "command-line tool", "clock", "digital clock", "python"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.5"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.urls]
Repository = "https://github.com/McSnurtle/cli-clock.git"
Issues = "https://github.com/McSnurtle/cli-clock/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setup.packages.find]
where = ["src"]

[project.scripts]
cli-clock = "cli_clock.main:launch"